<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/indratech_settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_settings_back"
                android:layout_width="@dimen/icon_dimen"
                android:layout_height="@dimen/icon_dimen"
                android:layout_margin="@dimen/_4sdp"
                android:src = "@drawable/ic_back"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_indratech"
                android:layout_margin="@dimen/_4sdp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indratech_settings_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Switch
                android:id="@+id/vibrateSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:text="@string/vibrate_indratech"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray"/>
            <Switch
                android:id="@+id/soundSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:text="@string/sound_indratech"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browser_indratech"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_margin="@dimen/_10sdp"/>
            <Switch
                android:id="@+id/adBlockerSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:text="@string/ad_blocker_indratech"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_indratech"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:id="@+id/indratech_rateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:gravity="center_vertical"
                android:text="@string/rate_indratech"
                android:visibility="gone"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/_2sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray"/>
            <TextView
                android:id="@+id/indratech_shareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:text="@string/shareus_indratech"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/_2sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray"/>
            <TextView
                android:id="@+id/indratech_moreApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:gravity="center_vertical"
                android:text="@string/indratech_moreApp"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/_2sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray"/>
            <TextView
                android:id="@+id/indratech_privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:text="@string/privacy_policy_indratech"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/_2sdp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>